<resources>
    <string name="app_name">SecureMessage</string>
    <string name="image_content">Logo</string>
    <string name="userid_hint">User ID</string>
    <string name="password_hint">Password</string>
    <string name="repassword_hint">Re-enter Password</string>
    <string name="login">Login</string>
    <string name="login_link">Already a member? Login</string>
    <string name="signup">Create Account</string>
    <string name="signup_link">No account yet? Create one</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="message">Send Message</string>
    <string name="read">Read Message</string>
    <string name="done">Done</string>
    <string name="messageTo">Message to %1$s</string>
    <string name="send">Send</string>
    <string name="remove">Remove User</string>
    <string name="add">Add User</string>
    <string name="enter_username">Enter Username</string>
</resources>
